--- a/sobre.html
+++ b/sobre.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre MusicDot</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="sobre.css">
+    
 </head>
 <body>
     
 
-    <img src="logo-musicdot.jpeg" alt="Logo da MusicDot com o texto 'music' em cinza e 'dot' em vermelho com d sendo estilizado para parecer uma nota musical">
+    <img src="img/logo.svg" alt="Logo da MusicDot com o texto 'music' em cinza e 'dot' em vermelho com d sendo estilizado para parecer uma nota musical">
 
     <h1>Sobre a empresa</h1>
 
     <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. <br><br>Nossa matriz fica em Mafra, em Santa Catarina. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
 
     <figure>
-    <img src="matriz.jpeg" alt="Prédio moderno da matriz da MusicDot em Mafra, Santa Catarina, com fachada em tons de bege e laranja, portão branco e calçada de pedras">
+    <img src="img/matriz-musicdot.png" alt="Prédio moderno da matriz da MusicDot em Mafra, Santa Catarina, com fachada em tons de bege e laranja, portão branco e calçada de pedras">
     <figcaption>Matriz MusicDot</figcaption>
     </figure>
 
@@ -24,7 +27,7 @@
     <h2>História</h2>
 
     <figure>
-        <img src="familia.jpeg" alt="Fotografia antiga em sépia da família Töpfeln com seis pessoas posando ao ar livre, em frente a um arbusto florido. Três crianças estão vestindo roupas tradicionais alemãs.">
+        <img src="img/familia-tupfeln.jpg" alt="Fotografia antiga em sépia da família Töpfeln com seis pessoas posando ao ar livre, em frente a um arbusto florido. Três crianças estão vestindo roupas tradicionais alemãs.">
         <figcaption>Familia Töpfeln</figcaption>
     </figure>
 
