--- a/sobre.html
+++ b/sobre.html
@@ -15,16 +15,17 @@
 
     <h1>Sobre a empresa</h1>
 
-    <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. <br><br>Nossa matriz fica em Mafra, em Santa Catarina. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
+    <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. <br><br>Nossa matriz fica em <a href=" http://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC
+">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
 
     <figure>
     <img src="img/matriz-musicdot.png" alt="Prédio moderno da matriz da MusicDot em Mafra, Santa Catarina, com fachada em tons de bege e laranja, portão branco e calçada de pedras">
     <figcaption>Matriz MusicDot</figcaption>
     </figure>
 
-    <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
+    <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas. Conheça também <a href="#H">nossa história</a> e <a href="#d">nossos diferenciais</a>.</p>
 
-    <h2>História</h2>
+    <h2 id="H">História</h2>
 
     <figure>
         <img src="img/familia-tupfeln.jpg" alt="Fotografia antiga em sépia da família Töpfeln com seis pessoas posando ao ar livre, em frente a um arbusto florido. Três crianças estão vestindo roupas tradicionais alemãs.">
@@ -35,7 +36,7 @@
     <p>O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já atendia 18 países. Bateu a marca de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 2 bilhões de usuários diferentes, em bilhões de diferentes pedidos.</p>
     <p>O crescimento do número de funcionários é também assombroso. Hoje, é a maior empregadora do Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Mafra e nos escritórios em todo o país.</p>
     <p>Dada a importância econômica da empresa para o Brasil, a família Töpfeln já recebeu diversos prêmios, homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da União Europeia, Ásia e o secretário-geral da ONU.</p>
-    <h2>Diferenciais</h2>
+    <h2 id="d">Diferenciais</h2>
     <ul>
         <li>Menor preço do mercado, garantido</li>
         <li>Se você achar um serviço mais barato, leva 1 mês de graça</li>
@@ -49,4 +50,5 @@
 
 </body>
 </html>
+
 
