resto da atvd 3 de verdade

--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,7 @@
     <figcaption>Matriz MusicDot</figcaption>
     </figure>
 
-    <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas. Conheça também <a href="#H">nossa história</a> e <a href="#d">nossos diferenciais</a>.</p>
+    <p>Assine os cursos da MusicDot. Acesse <a href="index.html">nosso site</a> ou entre em contato se tiver dúvidas. Conheça também <a href="#H">nossa história</a> e <a href="#d">nossos diferenciais</a>.</p>
 
     <h2 id="H">História</h2>
 
@@ -50,5 +50,6 @@
 
 </body>
 </html>
+
 
 
