resto da atvd 4

--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. <br><br>Nossa matriz fica em <a href=" http://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC
 ">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
 
-    <figure>
+    <figure id="matriz">
     <img src="img/matriz-musicdot.png" alt="Prédio moderno da matriz da MusicDot em Mafra, Santa Catarina, com fachada em tons de bege e laranja, portão branco e calçada de pedras">
     <figcaption>Matriz MusicDot</figcaption>
     </figure>
@@ -27,7 +27,7 @@
 
     <h2 id="H">História</h2>
 
-    <figure>
+    <figure id="familia">
         <img src="img/familia-tupfeln.jpg" alt="Fotografia antiga em sépia da família Töpfeln com seis pessoas posando ao ar livre, em frente a um arbusto florido. Três crianças estão vestindo roupas tradicionais alemãs.">
         <figcaption>Familia Töpfeln</figcaption>
     </figure>
@@ -50,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
