resto da atvd 5

--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,7 @@
 
     <img src="img/logo.svg" alt="Logo da MusicDot com o texto 'music' em cinza e 'dot' em vermelho com d sendo estilizado para parecer uma nota musical">
 
-    <h1>Sobre a empresa</h1>
+    <h1 class="coloridos" >Sobre a empresa</h1>
 
     <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. <br><br>Nossa matriz fica em <a href=" http://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC
 ">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
@@ -48,8 +48,11 @@
         <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
 
+    <h2 class="coloridos">Contato</h2>
+
 </body>
 </html>
+
 
 
 
