--- a/sobre.html
+++ b/sobre.html
@@ -49,9 +49,32 @@
     </ul>
 
     <h2 class="coloridos">Contato</h2>
+    <section>
+    <h3>Correspondência</h3>   
+  
+    <p>
+        <small>(todos os dias, das 9h às 18h)</small><br>
+        AOVS Sistemas de Informática S.A <br>
+        Rua Vergueiro, 3185, 8º andar<br>
+        Vila Mariana<br>
+        São Paulo - SP
+    </p>
+</section>
+
+<section>
+  <h3>Telefones</h3>
+  <small>(segunda à sexta, das 9h às 18h)</small>
+  <dl>
+    <dt>Pessoa Física:</dt>
+    <dd><a href="tel:+551141183319">(11) 4118-3319</a></dd>
+    <dt>Pessoa Jurídica:</dt>
+    <dd><a href="tel:+551141182172">(11) 4118-2172</a></dd>
+  </dl>
+</section>
 
 </body>
 </html>
+
 
 
 
