--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music.dot</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Página inicial da Music.dot</h1>
+   <header>
+        <img src="img/musicdot-logo-light.svg" alt="">
+        <nav>
+            <ul>
+                <li><a href="sobre.html#contato">Contato</a></li>
+                <li><a href="#">Entrar</a></li>
+                <li><a href="#">Matricule-se</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+
+      <p>Conteúdo principal</p>
+    </main>
+    <footer>
+        <p>Rodapé</p>
+    </footer>
 </body>
 </html>
+
