--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music.dot</title>
-    <link rel="stylesheet" href="mont.css" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,&display=block" >
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,6 +28,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
